fixed potentials spacing

--- a/styles/degenesis.css
+++ b/styles/degenesis.css
@@ -826,11 +826,11 @@
 
 .app.window-app.degenesis.sheet .potentials-group .first-part{
     display: flex;
-    flex: 3.4;
+    flex: 2;
 }
 
 .app.window-app.degenesis.sheet .potentials-group .potentials-legend .origin{
-    flex: 1;
+    flex: 2;
     margin-right: 5px;
 }
 
@@ -858,7 +858,7 @@
 }
 
 .app.window-app.degenesis.sheet .potentials-group .advantage-list .background-name {
-    flex: 3.4;
+    flex: 2;
 }
 
 .app.window-app.degenesis.sheet .potentials-group .potential-characteristics{
@@ -866,7 +866,7 @@
     flex: 1;
 }
 .app.window-app.degenesis.sheet .potentials-group .advantage-list .origin {
-    flex: 1;
+    flex: 2;
     display: block;
     text-align: center;
     margin-right: 5px;
